connected login and register

--- a/html5up-dimension/Login.html
+++ b/html5up-dimension/Login.html
@@ -26,6 +26,9 @@
 <div class="container" style="background-color:#f1f1f1">
     <button type="button" class="cancelbtn">Cancel</button>
     <span class="psw">Forgot <a href="#">password?</a></span>
+    <!-- Link to registration -->
+    <p>Don't have an acount, create one</p>
+    <a href="register.html">Register an Account</a>
   </div>
 </form>
 </body>
