--- a/html5up-dimension/register.html
+++ b/html5up-dimension/register.html
@@ -36,7 +36,7 @@
     </div>
   
     <div class="container signin">
-      <p>Already have an account? <a href="#">Sign in</a>.</p>
+      <p>Already have an account? <a href="Login.html">Sign in</a>.</p>
     </div>
   </form>
 </div>
