--- a/html5up-dimension/register.html
+++ b/html5up-dimension/register.html
@@ -34,7 +34,7 @@
       <p>By creating an account you agree to our <a href="#">Terms & Privacy</a>.</p>
       <button type="submit" class="registerbtn">Register</button>
     </div>
-  
+    <!-- connect to sign in page -->
     <div class="container signin">
       <p>Already have an account? <a href="Login.html">Sign in</a>.</p>
     </div>
